--- a/src/Components/Board/Board.css
+++ b/src/Components/Board/Board.css
@@ -1,3 +1,4 @@
+
 .board{
     padding: 1%;
     margin-left: 14rem;
@@ -7,10 +8,15 @@
 
 }
 .chat-board{
-    background-color: red;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 50%;
-    
-
+    height:95vh;
+    border-width: 1px;
+    border-style: solid;
+    border-color: whitesmoke;
 }
 .card-board{
     display: flex;
@@ -18,4 +24,15 @@
     flex-wrap: wrap;
     background-color: white;
     width: 50%;
+    height:60vh;
+}
+.sidebar{
+display: flex;
+position: fixed;
+height: 100vh;
+transition: width 1s;
+background-color: black;
+}
+.Open{
+width: 280px;
 }
