--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -15,6 +15,10 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     
 }
+.card:active{
+    box-shadow:0 4px 4px 0 rgba(0,0,0,0.2);
+    transform:translateY(4px);
+}
 .textcard{
     text-align: center;
     width: 75%;
