--- a/src/Components/DashBoard/DashBoard.css
+++ b/src/Components/DashBoard/DashBoard.css
@@ -1,21 +1,50 @@
 .dashboard {
+
     height: 100vh;
-}
-.all{
-height: 100vh;
-width: 100vw;
-background-color: black;
-opacity: 0.3;
+    width: 100vw;
 }
 
-.none{
-    visibility: hidden;
+.nonesliderControl {
+    height: 100vh;
+    width: 0px;
+    z-index: 100;
+    position: fixed;
+
+
+
 }
 
-.slidebar{
-    width: 280px;
-    height: 100vh;
-    background-color: blanchedalmond;
-    box-shadow: burlywood;
+.noneoutbox {
+
+    width: 0vw
+}
+
+.noneslidebox {
+  
+    width: 0vw;
     
+}
+
+.allsliderControl {
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    flex-direction: row;
+    display: flex;
+    z-index: 100;
+
+}
+
+.alloutbox {
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: width 1s;
+    width: 80vw
+}
+
+.allslidebox {
+    height: 100vh;
+    width: 20vw;
+    transition: width 1s;
+    background-color: rgb(170, 170, 243)
 }
