--- a/src/Components/Chat/Chat.css
+++ b/src/Components/Chat/Chat.css
@@ -11,10 +11,28 @@
     height: 40px;
     transition: 200ms;
     font-size: 15px;
+    
+}
+
+.chatDrag{
+    width: 90%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    background-color: white;
+    margin: 1.5%;
+    border-radius: 15px;
+    height: 40px;
+    transition: 200ms;
+    font-size: 15px;
+    opacity: 0.5;
 }
 .sidemenu{
     display: flex;
     justify-content: space-around;
+    cursor: default
 }
 .sideimage{
     padding: 5px 8px 5px 5px;
