--- a/src/Components/DashBoard/DashBoard.css
+++ b/src/Components/DashBoard/DashBoard.css
@@ -48,3 +48,10 @@
     transition: width 1s;
     background-color: rgb(170, 170, 243)
 }
+.chatSwitch{
+    position: relative;
+    z-index: 20;
+    height: 10px;
+    width: 10px;
+    background-color: blue;
+}
